# icanisddr

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  notes.ipynb  notes.md  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
experiments/bulkic/: README.md  analyse_samples.ipynb  config.yaml  data.py  main.py  plotting.py  pyproject.toml  run_sampling.py  run_sddr.py  sampling.py  sddr.py
experiments/bulkic/bulkic/: __init__.py  config.py  data.py  main.py  plotting.py
experiments/bulkic/notebooks/: analyse_samples.ipynb  gradients.ipynb  plot_paths.ipynb  prior_predictive.ipynb
experiments/bulkic/scripts/: 0_run_sampling.py  1_run_sddr.py  analyse_samples.ipynb
experiments/bulkic/src/bulkic/: config.py  data.py
experiments/bulkic_real/: README.md  config.yaml  pyproject.toml
experiments/bulkic_real/notebooks/: analyse_samples.ipynb  harmonic.ipynb  plot_paths.ipynb  prior_predictive.ipynb
experiments/bulkic_real/scripts/: 1_run_sampling.py  2_run_sddr.py  _construct_prior.py
experiments/imic/: README.md  config.yaml  pyproject.toml
experiments/imic/notebooks/: analyse_samples.ipynb  prior_predictive.ipynb
experiments/imic/scripts/: 0_run_sampling.py
experiments/imic_r/: README.md  config.yaml  pyproject.toml
experiments/imic_r/notebooks/: analyse_samples.ipynb  gradients.ipynb  prior_predictive.ipynb
experiments/imic_r/scripts/: 0_run_sampling.py  1_run_sddr.py
experiments/imic_r_real/: README.md  config.yaml  pyproject.toml
experiments/imic_r_real/notebooks/: analyse_samples.ipynb  harmonic.ipynb
experiments/imic_r_real/scripts/: 1_run_sampling.py
experiments/imic_real/: README.md  config.yaml  pyproject.toml
experiments/imic_real/notebooks/: analyse_samples.ipynb  prior_predictive.ipynb
experiments/imic_real/scripts/: 0_process_raw.py  1_run_sampling.py  2_run_sddr.py
profiling/: profile_einsum_v_matmul.py  profile_tensor_rotation.py  profile_traveltime_calculator.py  profile_tt_voigt_v_fourth.py  pyproject.toml
src/expconfig/: pyproject.toml
src/expconfig/examples/: geometry_examples.md
src/expconfig/src/expconfig/: __init__.py  _sddr.py  config.py  geometry.py  synthetic.py
src/expconfig/tests/: test_config.py  test_geometry.py  test_synthetic.py
src/icprem/: README.md  pyproject.toml
src/icprem/src/icprem/: __init__.py  love.py  model.py
src/icprem/tests/test_icprem/: test_love.py  test_model.py
src/raytracer/: README.md  pyproject.toml
src/raytracer/src/raytracer/: __init__.py  intersection.py  regions.py
src/raytracer/tests/: test_regions.py
src/sddr/: likelihood.py  posterior.py  prior.py
src/sdicani/: __init__.py
src/sdicani/sddr/: __init__.py  likelihood.py  posterior.py  prior.py  sampling.py  sddr.py
src/sdicani/sddr/priors/: __init__.py  _protocols.py  _utils.py  component.py  compound.py  gaussian.py  marginalisation.py  uniform.py
src/sdicani/tti/: __init__.py  forward.py
src/sdicani/util/: __init__.py  parallel.py
src/tti/: __init__.py  creager.py  elastic.py  forward.py  pyproject.toml  rotation.py
src/tti/src/tti/: creager.py  elastic.py  forward.py  rotation.py
src/tti/src/tti/elastic/: __init__.py  creager.py  fourth.py  voigt.py  voigt_mapping.py
src/tti/src/tti/traveltimes/: __init__.py  _gradient_D.py  _types.py  _unpackings.py  paths.py  traveltimes.py
src/tti/src/tti/traveltimes/_parametrisations/: __init__.py  _abc.py  absolute.py  absolute_no_shear.py  nested.py  nested_no_shear.py  nested_relative.py  nested_relative_no_shear.py  no_shear.py  radians.py  radians_no_shear.py  relative.py  relative_no_shear.py
src/tti/src/tti/traveltimes/parametrisations/: nested_relative.py  nested_relative_no_shear.py  relative.py  relative_no_shear.py
src/tti/tests/: conftest.py
src/tti/tests/test_tti/: test_creager.py  test_elastic.py  test_forward.py  test_rotation.py
src/tti/tests/test_tti/test_elastic/: test_creager.py  test_fourth.py  test_voigt.py  test_voigt_mapping.py
src/tti/tests/test_tti/test_traveltimes/: test__unpackings.py  test_paths.py  test_traveltimes.py
src/tti/tests/test_tti/test_traveltimes/test__parametrisations/: conftest.py  test__abc.py  test_absolute.py  test_absolute_no_shear.py  test_nested.py  test_nested_no_shear.py  test_nested_relative.py  test_nested_relative_no_shear.py  test_radians.py  test_radians_no_shear.py  test_relative.py  test_relative_no_shear.py
tests/test_sddr/: test_likelihood.py  test_posterior.py  test_prior.py
tests/test_sdicani/test_sddr/: test_likelihood.py  test_posterior.py  test_prior.py  test_sampling.py  test_sddr.py
tests/test_sdicani/test_sddr/test_priors/: test_compound.py  test_config.py  test_gaussian.py  test_marginalisation.py  test_uniform.py
tests/test_sdicani/test_tti/: test_creager.py  test_elastic.py  test_forward.py  test_rotation.py
tests/test_sdicani/test_util/: test_parallel.py
tests/test_tti/: test_creager.py  test_elastic.py  test_forward.py  test_rotation.py
