[project]
name = "savagedickeyicanisotropy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emcee>=3.1.6",
    "harmonic>=1.3.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]


[tool.uv]
# harmonic requires distrax which requires numpy<2
# but pytransc, pyfm2d require numpy>=2
# distrax hasn't released anything in over a year
# so seems unlikely to update
override-dependencies = ["numpy>=2"]
