[project]
name = "savagedickeyicanisotropy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "emcee>=3.1.6",
    "harmonic>=1.3.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# harmonic requires distrax which requires numpy<2
# but pytransc, pyfm2d require numpy>=2
# distrax hasn't released anything in over a year
# so seems unlikely to update
override-dependencies = ["numpy>=2"]


[tool.ruff.lint]
select = [
    "B007",    # Loop control variable {name} not used within loop body
    "B014",    # Exception handler with duplicate exception
    "C",       # complexity
    "D",       # docstrings
    "E",       # pycodestyle
    "F",       # pyflakes/autoflake
    "I",       # format imports
    "ICN001",  # import conventions; {name} should be imported as {asname}
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "SIM105",  # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117",  # Merge with-statements that use the same scope
    "SIM118",  # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201",  # Use {left} != {right} instead of not {left} == {right}
    "SIM212",  # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300",  # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401",  # Use get from dict with default instead of an if block
    "TRY004",  # Prefer TypeError exception for invalid type
    "RUF006",  # Store a reference to the return value of asyncio.create_task
    "UP",      # pyupgrade
    "W",       # pycodestyle
    "NPY",     # NumPy
    "PT001",   # @pytest.fixture() decorators with or without parentheses, depending on the lint.flake8-pytest-style.fixture-parentheses setting
]
ignore = [
    "D202",  # No blank lines allowed after function docstring
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D401",  # First line should be in imperative mood
    "D404",  # First word of the docstring should not be This
    "D406",  # Section name should end with a newline
    "D407",  # Section name underlining
    "D411",  # Missing blank line before section
    "E501",  # line too long
    "E731",  # do not assign a lambda expression, use a def
]
[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=src", "--cov-report=term-missing", "--cov-report=xml"]

[tool.coverage.run]
branch = true
source = ["src"]   # only measure files under src/

[tool.coverage.report]
omit = [
  "tests/*",
  "*/tests/*",
  "**/test_*.py",
  "**/*_test.py",
]
show_missing = true
