[project]
name = "sdicani"
version = "0.1.0"
description = "SAvage-Dickey Density Ratio for Anisotropic Seismic Tomography of the Inner Core"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "sddr",
    "sampling",
    "tti",
    "expconfig",
]

[tool.uv.workspace]
members = ["experiments/*", "profiling", "src/tti", "src/expconfig"]

[tool.uv.sources]
tti = { workspace = true }
expconfig = { workspace = true }
sddr = { git = "https://github.com/auggiemarignier/bmcmethods.git", branch = "main", subdirectory = "packages/sddr" }
sampling = { git = "https://github.com/auggiemarignier/bmcmethods.git", branch = "main", subdirectory = "packages/sampling" }

[tool.ruff.lint]
select = [
    "B007",    # Loop control variable {name} not used within loop body
    "B014",    # Exception handler with duplicate exception
    "C",       # complexity
    "D",       # docstrings
    "E",       # pycodestyle
    "F",       # pyflakes/autoflake
    "I",       # format imports
    "ICN001",  # import conventions; {name} should be imported as {asname}
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "SIM105",  # Use contextlib.suppress({exception}) instead of try-except-pass
    "SIM117",  # Merge with-statements that use the same scope
    "SIM118",  # Use {key} in {dict} instead of {key} in {dict}.keys()
    "SIM201",  # Use {left} != {right} instead of not {left} == {right}
    "SIM212",  # Use {a} if {a} else {b} instead of {b} if not {a} else {a}
    "SIM300",  # Yoda conditions. Use 'age == 42' instead of '42 == age'.
    "SIM401",  # Use get from dict with default instead of an if block
    "TRY004",  # Prefer TypeError exception for invalid type
    "RUF006",  # Store a reference to the return value of asyncio.create_task
    "UP",      # pyupgrade
    "W",       # pycodestyle
    "NPY",     # NumPy
    "PT001",   # @pytest.fixture() decorators with or without parentheses, depending on the lint.flake8-pytest-style.fixture-parentheses setting
]
ignore = [
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D404", # First word of the docstring should not be This
    "D406", # Section name should end with a newline
    "D407", # Section name underlining
    "D411", # Missing blank line before section
    "E501", # line too long
    "E731", # do not assign a lambda expression, use a def
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["expconfig", "tti", "sampling"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
    "D", # docstrings
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["src/tti/tests"]
addopts = ["-v", "--cov=src", "--cov-report=term-missing", "--cov-report=xml"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/tests/*", "**/test_*.py", "**/*_test.py"]

[tool.coverage.report]
show_missing = true
