[project]
name = "imic_real"
version = "0.1.0"
description = "Scripts for IMIC analysis"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "cartopy>=0.25.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pykdtree>=1.4.3",
]
