[project]
name = "expconfig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "auggiemarignier", email = "auggie.marignier@earth.ox.ac.uk" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "pydantic>=2.12.5",
    "raytracer",
    "numpy>=1.24.0",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
