[project]
name = "icprem"
version = "0.1.0"
description = "The inner core part of PREM."
readme = "README.md"
authors = [
    { name = "auggiemarignier", email = "auggie.marignier@earth.ox.ac.uk" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "premlike>=0.1.0a2",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
